fix: use optional chaining for safe access in hero and mini-hero property extraction style: update main layout to improve overflow handling and adjust padding

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,20 +72,13 @@ body.appear {
 }
 
 main {
-    display: flex;
-    flex-direction: column;
     margin: 0 auto;
     overflow-x: hidden;
-    gap: var(--Layout-Page-Gap);
 }
 
 .section:not(:has(.hero, .mini-hero)) {
     padding-inline: var(--Layout-Section-Margin-Horizontal-Padding, 4rem);
-    padding-block: var(--Layout-Section-Vertical-Padding, 0);
-
-    &:last-of-type {
-        padding-bottom: var(--Layout-Page-Gap, 4rem);
-    }
+    padding-block: var(--Layout-Section-Vertical-Padding, 4rem);
 }
 
 header .header,
